--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,11 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #02191d;
   --foreground: #171717;
+  --primary: #197686;
+  --textGray: #b3b3b3;
+  --textDark: #0a0c11;
 }
 
 /* @media (prefers-color-scheme: dark) {
