--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Road+Rage&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Road+Rage&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Jeju+Myeongjo&display=swap");
 
 :root {
   --background: #02191d;
@@ -21,6 +22,12 @@ body {
 
 .font-road-rage {
   font-family: "Road Rage", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.font-jeju {
+  font-family: "Jeju Myeongjo", serif;
   font-weight: 400;
   font-style: normal;
 }
